--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
   "dependencies": {
     "express": "^4.15.3",
     "body-parser": "^1.17.2",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "mustache": "^2.3.0",
+    "jfs": "^0.2.6",
+    "ware": "^1.3.0",
+    "crypto": "^0.0.3",
+    "promise": "^8.0.0",
+    "md5": "^2.2.1",
+    "botkit-studio-sdk": "^1.0.2"
   },
   "engines": {
     "node": "8.1.x"
