--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "name": "my-glitch-app",
   "version": "0.0.1",
   "description": "What am I about?",
-  "main": "server.js",
+  "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
