--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "crypto": "^0.0.3",
     "promise": "^8.0.0",
     "md5": "^2.2.1",
-    "botkit-studio-sdk": "^1.0.2"
+    "botkit-studio-sdk": "^1.0.2",
+    "ws": "^3.0.0",
+    "https-proxy-agent": "^2.0.0",
+    "back": "^1.0.1"
   },
   "engines": {
     "node": "8.1.x"
