--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "ws": "^3.0.0",
     "https-proxy-agent": "^2.0.0",
     "back": "^1.0.1",
-    "emoji-name-map": "^1.2.4"
+    "emoji-name-map": "^1.2.4",
+    "emoji-js": "^3.2.2"
   },
   "engines": {
     "node": "8.1.x"
